syntax = "proto3";
package api.port;

option go_package = "api/port";

message Port {
  string id = 1;
  string name = 2;
  string city = 3;
  string country = 4;
  repeated string alias = 5;
  repeated string regions = 6;
  repeated double coordinates = 7;
  string province = 8;
  string timezone = 9;
  repeated string unlocs = 10;
  string code = 11;
}

message GetPortRequest { 
  string id = 1; 
}

message ImportPortsResponse {
  uint64 total = 1;
  uint64 created = 2;
  uint64 updated = 3;
  repeated string errors = 4;
}

service PortsService {
  rpc GetPort(GetPortRequest) returns(Port){};
  rpc StreamImportedPorts(stream Port) returns(ImportPortsResponse){};
}
